# charly

./: .flake8  .travis.yml  LICENSE  README.rst  setup.cfg  setup.py  tox.ini
docs/source/: conf.py  index.rst  utils.rst
src/charly/: __init__.py  utils.py
tests/: test_utils.py
