[metadata]
name = charly
version = 0.0.1-dev
description = This is the test programm.
long_description = file: README.rst

keywords=
    SBML
    Systems Biology
    Networks Biology
    Differential Equations


# URLs associated with the project
url = https://github.com/LaraFuhrmann/charly.git
download_url = https://github.com/LaraFuhrmann/charly.git
project_urls =
    Bug Tracker = https://github.com/pybel/pybel/issues
    Source Code = https://github.com/pybel/pybel
    Documentation = https://pybel.readthedocs.io


# Author information
author = Lara Fuhrmann
author_email = lara.fuhrmann@online.de
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com


# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Mathematics


# just copy this in your project
# ----------------------------------------
[options]
# where is my code
packages= find:
package_dir =
    = src

[options.packages.find]
where = src

# ----------------------------------------
